--- a/exercises/ex002/index.html
+++ b/exercises/ex002/index.html
@@ -8,7 +8,16 @@
 <body>
     <h1>Parágrafos e quebras de linha</h1>
     <hr>
-    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p>
+    <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p> <!--lt = Less Than & gt = Greater Than-->
     <p>Se precisar quebrar o texto em algum lugar específico, como esse, <br> você pode usar a tag &lt;br&gt;</p>
+    <p>Vamos adicionar alguns símbolos especiais. <br>
+    &reg;, &copy;, &trade;, &euro;, &pound;, &yen;, &cent;<br>
+    &delta;, &Delta;, &Del;, &uarr;, &uArr;, &UpArrowBar;
+    </p>
+
+    <p>
+        Vamos adicionar alguns emojis <br>
+        &#x1F5FB; &#x1F383; &#x2603;
+    </p>
 </body>
 </html>
