--- a/old_course/material/projeto-glass-html5/index.html
+++ b/old_course/material/projeto-glass-html5/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+
+<html lang='pt-br'>
+
+<head>
+    <meta charset='UTF-8'>
+    <title>Tudo sobre Google Glass</title>
+
+</head>
+
+
+<body>
+
 Google Glass
 A revolução do Google está chegando
 
@@ -51,3 +64,7 @@ Além da surpresa do áudio, a tela montada a frente do olho do usuário também
 
 Copyright 2013 - by Gustavo Guanabara
 Facebook | Twitter
+
+</body>
+
+</html>
