--- a/old_course/material/projeto-glass-html5/index.html
+++ b/old_course/material/projeto-glass-html5/index.html
@@ -7,14 +7,15 @@
     <title>Tudo sobre Google Glass</title>
 
 </head>
-
-
 <body>
+<div id='interface'>
 
-Google Glass
-A revolução do Google está chegando
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
 
-[AQUI ENTRA UMA FOTO]
+    <img src='_imagens/glass-oculos-preto-peq.png'>
 
 Menu Principal
 - Home
@@ -65,6 +66,7 @@ Além da surpresa do áudio, a tela montada a frente do olho do usuário também
 Copyright 2013 - by Gustavo Guanabara
 Facebook | Twitter
 
+</div>
 </body>
 
 </html>
