--- a/old_course/material/projeto-glass-html5/index.html
+++ b/old_course/material/projeto-glass-html5/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id='interface'>
 
+    <header id='cabecalho'>
     <hgroup>
     <h1>Google Glass</h1>
     <h2>A revolução do Google está chegando</h2>
@@ -23,6 +24,7 @@ Menu Principal
 - Fotos
 - Multimídia
 - Fale conosco
+    </header>
 
 Tecnologia > Inovações
 Saiba tudo sobre o Google Glass
