--- a/old_course/material/projeto-glass-html5/index.html
+++ b/old_course/material/projeto-glass-html5/index.html
@@ -57,8 +57,8 @@ Memória Interna: 12GB
 
 [AQUI ENTRA UM VÍDEO]
 
-Outras Notícias
-Vídeo mais recente
+<h1>Outras Notícias</h1>
+<h2>Vídeo mais recentes</h2>
 
 [AQUI ENTRA UM VÍDEO]
 
@@ -67,8 +67,8 @@ Vídeo mais recente
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+<h2>Copyright 2013 - by Gustavo Guanabara</h2>
+<h3>Facebook | Twitter</h3>
 
 </div>
 </body>
