--- a/old_course/material/projeto-glass-html5/index.html
+++ b/old_course/material/projeto-glass-html5/index.html
@@ -67,7 +67,7 @@ Memória Interna: 12GB
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
-<h2>Copyright 2013 - by Gustavo Guanabara</h2>
+<h2>Copyright&copy; 2013 - by Gustavo Guanabara</h2>
 <h3>Facebook | Twitter</h3>
 
 </div>
