--- a/old_course/material/projeto-glass-html5/index.html
+++ b/old_course/material/projeto-glass-html5/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+
 <div id='interface'>
 
     <header id='cabecalho'>
@@ -17,7 +18,7 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img src='_imagens/glass-oculos-preto-peq.png'>
+    <img id='icone' src='_imagens/glass-oculos-preto-peq.png'>
 
 <nav id='menu'>
 	<h1>Menu Principal</h1>
@@ -82,6 +83,7 @@ Memória Interna: 12GB
 <h3>Facebook | Twitter</h3>
 
 </div>
+
 </body>
 
 </html>
