--- a/old_course/material/projeto-glass-html5/testejs01.html
+++ b/old_course/material/projeto-glass-html5/testejs01.html
@@ -7,6 +7,9 @@
 
 <body>
     <h1>Testando JavaScript</h1>
+    <script>
+        document.write('Olá, hoje é dia ' + Date());
+    </script>
 </body>
 
 </html>
