--- a/old_course/material/projeto-glass-html5/testejs01.html
+++ b/old_course/material/projeto-glass-html5/testejs01.html
@@ -3,13 +3,25 @@
 <head>
     <title>Teste JavaScript</title>
     <meta charset="UTF-8">
+    <script>
+        function acendeLampada() {
+           document.getElementById('luz').src='_imagens/lampada-acesa.jpg'; 
+        }
+
+        function desligaLampada() {
+            document.getElementById('luz').src='_imagens/lampada-apagada.jpg'
+        }
+
+        function quebraLampada() {
+            document.getElementById('luz').src='_imagens/lampada-quebrada.jpg'
+        }
+    </script>
 </head>
 
 <body>
-    <h1>Testando JavaScript</h1>
-    <script>
-        document.write('Olá, hoje é dia ' + Date());
-    </script>
+    <h1>Acenda a Lâmpada</h1>
+    <img src="_imagens/lampada-apagada.jpg" id="luz" onmousemove="acendeLampada()" onmouseout="desligaLampada()" onclick="quebraLampada()">
+
 </body>
 
 </html>
