--- a/old_course/material/projeto-glass-html5/specs.html
+++ b/old_course/material/projeto-glass-html5/specs.html
@@ -21,7 +21,7 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img id='icone' src='_imagens/glass-oculos-preto-peq.png'>
+    <img id='icone' src='_imagens/especificacoes.png'>
 
 <nav id='menu'>
 	<h1>Menu Principal</h1>
@@ -40,17 +40,13 @@
 <article id='noticia-principal'>
 <header id='cabecalho-artigo'>
 <hgroup>
-<h3>Tecnologia > Inovações</h3> <!-- &nbsp; para criar espaços em branco e <br> para quebra de linha. -->
-<h1>Saiba tudo sobre o Google Glass</h1>
+<h3>Glass > Especificações</h3> <!-- &nbsp; para criar espaços em branco e <br> para quebra de linha. -->
+<h1>Raio-X no Google Glass</h1>
 <h2>por Gustavo Guanabara</h2>
-<h3 class='direita'>Atualizado em 23/Abril/2013</h3>
+<h3 class='direita'>Atualizado em 01/Maio/2013</h3>
 </hgroup>
 </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
 
 Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
 
