--- a/old_course/material/projeto-glass-html5/fotos.html
+++ b/old_course/material/projeto-glass-html5/fotos.html
@@ -1,19 +1,51 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
 
-[AQUI ENTRA UMA FOTO]
+<html lang='pt-br'>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<head>
+    <meta charset='UTF-8'>
+    <title>Tudo sobre Google Glass</title>
+    <link rel='stylesheet' href='_css/estilo.css'>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+</head>
+
+<script language=javascript src='_javascript/funcoes.js'></script>
+
+<body>
+
+<div id='interface'>
+
+    <header id='cabecalho'>
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
+
+    <img id='icone' src='_imagens/fotos.png'>
+
+<nav id='menu'>
+	<h1>Menu Principal</h1>
+	<ul>
+		<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href='index.html'>Home</a></li>
+		<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href='specs.html'>Especificações</a></li>
+		<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href='fotos.html'>Fotos</a></li>
+		<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href='multimidia.html'>Multimídia</a></li>
+		<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href='fale-conosco.html'>Fale conosco</a></li>
+	</ul>
+</nav>
+
+</header>
+
+<section id='corpo'>
+<article id='noticia-principal'>
+<header id='cabecalho-artigo'>
+<hgroup>
+<h3>Glass > Fotos</h3> <!-- &nbsp; para criar espaços em branco e <br> para quebra de linha. -->
+<h1>Galeria de Imagens do Google Glass</h1>
+<h2>por Gustavo Guanabara</h2>
+<h3 class='direita'>Atualizado em 01/Maio/2013</h3>
+</hgroup>
+</header>
 
 Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
 
@@ -24,6 +56,12 @@ Veja na nossa galeria de fotos várias belas imagens que mostram algumas das pri
 - Vários tipos de lente
 - Informações importantes
 
-Copyright 2013 - by Gustavo Guanabara
-
-Facebook | Twitter
+<footer id='rodape'>
+    <p>Copyright&copy; 2013 - by Gustavo Guanabara<br>
+    <a href='https://facebook.com/cursosemvideo' target='_blank'>Facebook</a> | 
+    <a href='https://twitter.com/cursosemvideo' target='_blank'>Twitter</a></p>
+    </footer>
+    
+    </div>
+    </body>
+    </html>
