--- a/old_course/material/projeto-glass-html5/multimidia.html
+++ b/old_course/material/projeto-glass-html5/multimidia.html
@@ -1,25 +1,63 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
 
-[AQUI ENTRA UMA FOTO]
+<html lang='pt-br'>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<head>
+    <meta charset='UTF-8'>
+    <title>Tudo sobre Google Glass</title>
+    <link rel='stylesheet' href='_css/estilo.css'>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+</head>
 
+<script language=javascript src='_javascript/funcoes.js'></script>
+
+<body>
+
+<div id='interface'>
+
+    <header id='cabecalho'>
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
+
+    <img id='icone' src='_imagens/multimidia.png'>
+
+<nav id='menu'>
+	<h1>Menu Principal</h1>
+	<ul>
+		<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href='index.html'>Home</a></li>
+		<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href='specs.html'>Especificações</a></li>
+		<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href='fotos.html'>Fotos</a></li>
+		<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href='multimidia.html'>Multimídia</a></li>
+		<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href='fale-conosco.html'>Fale conosco</a></li>
+	</ul>
+</nav>
+
+</header>
+
+<section id='corpo'>
+<article id='noticia-principal'>
+<header id='cabecalho-artigo'>
+<hgroup>
+<h3>Glass > Multimídia</h3> <!-- &nbsp; para criar espaços em branco e <br> para quebra de linha. -->
+<h1>Sons e vídeos</h1>
+<h2>por Gustavo Guanabara</h2>
+<h3 class='direita'>Atualizado em 01/Maio/2013</h3>
+</hgroup>
+</header>
 
 Áudio e Vídeo
 
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+<footer id='rodape'>
+    <p>Copyright&copy; 2013 - by Gustavo Guanabara<br>
+    <a href='https://facebook.com/cursosemvideo' target='_blank'>Facebook</a> | 
+    <a href='https://twitter.com/cursosemvideo' target='_blank'>Twitter</a></p>
+    </footer>
+    
+    </div>
+    </body>
+    </html>
