--- a/old_course/material/projeto-glass-html5/specs.html
+++ b/old_course/material/projeto-glass-html5/specs.html
@@ -6,6 +6,7 @@
     <meta charset='UTF-8'>
     <title>Tudo sobre Google Glass</title>
     <link rel='stylesheet' href='_css/estilo.css'>
+    <link rel='stylesheet' href="_css/specs.css">
 
 </head>
 
@@ -36,7 +37,7 @@
 
 </header>
 
-<section id='corpo'>
+<section id='corpo-full'>
 <article id='noticia-principal'>
 <header id='cabecalho-artigo'>
 <hgroup>
@@ -48,9 +49,14 @@
 </header>
 
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
-[AQUI ENTRA UMA IMAGEM]
+<section id='conteudo'>
+    <img src='_imagens/glass-esquema-marcado.jpg'>
+    <iframe src='google-glass.html' name='janela' id='framespec'></iframe>
+</section>
+</article>
+</section>
 
 <footer id='rodape'>
     <p>Copyright&copy; 2013 - by Gustavo Guanabara<br>
