--- a/old_course/material/projeto-glass-html5/fotos.html
+++ b/old_course/material/projeto-glass-html5/fotos.html
@@ -6,6 +6,7 @@
     <meta charset='UTF-8'>
     <title>Tudo sobre Google Glass</title>
     <link rel='stylesheet' href='_css/estilo.css'>
+    <link rel='stylesheet' href='_css/fotos.css'>
 
 </head>
 
@@ -36,7 +37,7 @@
 
 </header>
 
-<section id='corpo'>
+<section id='corpo-full'>
 <article id='noticia-principal'>
 <header id='cabecalho-artigo'>
 <hgroup>
@@ -47,14 +48,20 @@
 </hgroup>
 </header>
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+<p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+<ul id='album-fotos'>
+<li id='foto01'><span>Agenda e lembretes</span></li>
+<li id='foto02'><span>Sergey Brin usando o Glass</span></li>
+<li id='foto03'><span>Leve e compacto</span></li>
+<li id='foto04'><span>Sensação de uma tela de 50"</span></li>
+<li id='foto05'><span>Vários tipos de lente</span></li>
+<li id='foto06'><span>Informações importantes</span></li>
+</ul>
+
+</article>
+</section>
+
 
 <footer id='rodape'>
     <p>Copyright&copy; 2013 - by Gustavo Guanabara<br>
