--- a/old_course/material/projeto-glass-html5/multimidia.html
+++ b/old_course/material/projeto-glass-html5/multimidia.html
@@ -6,6 +6,7 @@
     <meta charset='UTF-8'>
     <title>Tudo sobre Google Glass</title>
     <link rel='stylesheet' href='_css/estilo.css'>
+    <link rel='stylesheet' href='_css/media.css'>
 
 </head>
 
@@ -36,7 +37,7 @@
 
 </header>
 
-<section id='corpo'>
+<section id='corpo-full'>
 <article id='noticia-principal'>
 <header id='cabecalho-artigo'>
 <hgroup>
@@ -47,10 +48,17 @@
 </hgroup>
 </header>
 
-Áudio e Vídeo
+<div id='tv-radio'>
+    <audio id='musica'>
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+    </audio>
+    <video id='filme'>
+
+    </video>
+</div>
+
+</article>
+</section>
 
 <footer id='rodape'>
     <p>Copyright&copy; 2013 - by Gustavo Guanabara<br>
