--- a/old_course/material/projeto-glass-html5/fale-conosco.html
+++ b/old_course/material/projeto-glass-html5/fale-conosco.html
@@ -6,6 +6,7 @@
     <meta charset='UTF-8'>
     <title>Tudo sobre Google Glass</title>
     <link rel='stylesheet' href='_css/estilo.css'>
+    <link rel='stylesheet' href='_css/form.css'>
 
 </head>
 
@@ -36,7 +37,7 @@
 
 </header>
 
-<section id='corpo'>
+<section id='corpo-full'>
 <article id='noticia-principal'>
 <header id='cabecalho-artigo'>
 <hgroup>
@@ -47,33 +48,46 @@
 </hgroup>
 </header>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+</article>
+</section>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+<form>
+    <fieldset id='usuario'>
+        <legend>Identificação do Usuário</legend>
+            <p><label for='cNome'>Nome:</label><input type='text' name='tNome' id='cNome' size="25" maxlength="35" placeholder="Nome e Sobrenome"></p>
+            <p><label for='cSenha'>Senha:</label><input type='password' name="tSenha" id="cSenha" size="10" maxlength="16" minlength="8" placeholder="8~16 caracteres"></p>
+            <p><label for='cEmail'>E-mail:</label><input type="email" name="tEmail" id='cEmail' size="20" maxlength="40" placeholder="email@provedor.com.br"></p>
+            <fieldset id='sexo'><legend>Sexo:</legend>
+                <input checked type="radio" name='tSexo' id="cMasc"><label for='cMasc'>Masculino</label><br>
+                <input type="radio" name="tSexo" id="cFem"><label for='cFem'>Feminino</label></fieldset>
+            <p>Data de Nascimento:<input type="date" name="tDate" id="cDate"></p>
+    </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+    <fieldset id='endereco'>
+        <legend>Endereço do Usuário</legend>
+            Logradouro:
+            Número:
+            Estado:
+            Cidade:
+    </fieldset>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+    <fieldset id='mensagem'>
+        <legend>Mensagem do Usuário</legend>
+            Grau de Urgência:
+            Mensagem:
+    </fieldset>
+
+    <fieldset id='pedido'>
+        <legend>Quero um Google Glass</legend>
+            Gostaria de adquirir um Google Glass quando disponível
+            Cor:
+            Quantidade:
+            Preço Total: R$
+    </fieldset>
 
 
-[BOTÃO ENVIAR]
+    [BOTÃO ENVIAR]
+</form>
 
 <footer id='rodape'>
     <p>Copyright&copy; 2013 - by Gustavo Guanabara<br>
