--- a/old_course/material/projeto-glass-html5/fale-conosco.html
+++ b/old_course/material/projeto-glass-html5/fale-conosco.html
@@ -65,10 +65,10 @@
 
     <fieldset id='endereco'>
         <legend>Endereço do Usuário</legend>
-            Logradouro:
-            Número:
-            Estado:
-            Cidade:
+            <p>Logradouro:<input type="text" name="tRua" id="cRua" size="13" maxlength="60" placeholder="Rua"></p>
+            <p>Número:<input type="number" name="tNum" id="cNum" min="1" max="99999"></p>
+            <p>Estado:</p>
+            <p>Cidade:</p>
     </fieldset>
 
     <fieldset id='mensagem'>
