--- a/old_course/material/projeto-glass-html5/fale-conosco.html
+++ b/old_course/material/projeto-glass-html5/fale-conosco.html
@@ -51,7 +51,7 @@
 </article>
 </section>
 
-<form>
+<form method="POST" id='fContato' action='mailto:vandernobrel@gmail.com'>
     <fieldset id='usuario'>
         <legend>Identificação do Usuário</legend>
             <p><label for='cNome'>Nome:</label><input type='text' name='tNome' id='cNome' size="25" maxlength="35" placeholder="Nome e Sobrenome"></p>
@@ -65,24 +65,44 @@
 
     <fieldset id='endereco'>
         <legend>Endereço do Usuário</legend>
-            <p>Logradouro:<input type="text" name="tRua" id="cRua" size="13" maxlength="60" placeholder="Rua"></p>
-            <p>Número:<input type="number" name="tNum" id="cNum" min="1" max="99999"></p>
-            <p>Estado:</p>
-            <p>Cidade:</p>
+            <p><label for='cRua'>Logradouro:</label><input type="text" name="tRua" id="cRua" size="13" maxlength="60" placeholder="Rua"></p>
+            <p><label for='cNum'>Número:</label><input type="number" name="tNum" id="cNum" min="1" max="99999"></p>
+            <p><label for='cEst'>Estado:</label><select name='tEst' id='cEst'>
+                <optgroup label='Região Sudeste'>
+                    <option value='RJ'>Rio de Janeiro</option>
+                    <option value="SP" selected>São Paulo</option>
+                    <option value="MG">Minas Gerais</option>
+                </optgroup>
+
+                <optgroup label='Região Sul'>
+                    <option value="PR">Paraná</option>
+                    <option value="SC">Santa Catarina</option>
+                    <option value="RS">Rio Grande do Sul</option>
+            </optgroup>
+            </select></p>
+            <p><label for='cCid'>Cidade:</label><input type="text" name="tCid" id="cCid" maxlength="40" size="20" placeholder="Sua Cidade" list='cidades'>
+            <datalist id='cidades'>
+                <option value="Rio de Janeiro"></option>
+                <option value="Nova Iguaçu"></option>
+                <option value="Niterói"></option>
+                <option value="Belford Roxo"></option>
+            </datalist></p>
     </fieldset>
 
     <fieldset id='mensagem'>
         <legend>Mensagem do Usuário</legend>
-            Grau de Urgência:
-            Mensagem:
+            <p><label for='cUrg'>Grau de Urgência:</label>
+            <input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2"></p>
+            <p><label for='cMsg'>Mensagem:</label>
+            <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Deixe aqui sua mensagem."></textarea></p>
     </fieldset>
 
     <fieldset id='pedido'>
         <legend>Quero um Google Glass</legend>
-            Gostaria de adquirir um Google Glass quando disponível
-            Cor:
-            Quantidade:
-            Preço Total: R$
+            <p><label for='cPed'>Gostaria de adquirir um Google Glass quando disponível</label></p>
+            <p><label for='cCor'>Cor:</label></p>
+            <p><label for='cQtd'>Quantidade:</label></p>
+            <p><label for='cTot'>Preço Total: R$</label></p>
     </fieldset>
 
 
