--- a/old_course/material/projeto-glass-html5/fale-conosco.html
+++ b/old_course/material/projeto-glass-html5/fale-conosco.html
@@ -12,6 +12,14 @@
 
 <script language=javascript src='_javascript/funcoes.js'></script>
 
+<script>
+    function calc_total() {
+        var qtd = parseInt(document.getElementById('cQtd').value);
+        tot = qtd * 1500
+        document.getElementById('cTot').value = tot
+    }
+</script>
+
 <body>
 
 <div id='interface'>
@@ -51,7 +59,7 @@
 </article>
 </section>
 
-<form method="POST" id='fContato' action='mailto:vandernobrel@gmail.com'>
+<form method="POST" id='fContato' action='mailto:vandernobrel@gmail.com' oninput="calc_total()">
     <fieldset id='usuario'>
         <legend>Identificação do Usuário</legend>
             <p><label for='cNome'>Nome:</label><input type='text' name='tNome' id='cNome' size="25" maxlength="35" placeholder="Nome e Sobrenome"></p>
@@ -94,19 +102,23 @@
             <p><label for='cUrg'>Grau de Urgência:</label>
             <input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2"></p>
             <p><label for='cMsg'>Mensagem:</label>
-            <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Deixe aqui sua mensagem."></textarea></p>
+            <textarea name="tMsg" id="cMsg" cols="35" rows="5" placeholder="Deixe aqui sua mensagem."></textarea></p>
     </fieldset>
 
     <fieldset id='pedido'>
         <legend>Quero um Google Glass</legend>
-            <p><label for='cPed'>Gostaria de adquirir um Google Glass quando disponível</label></p>
-            <p><label for='cCor'>Cor:</label></p>
-            <p><label for='cQtd'>Quantidade:</label></p>
-            <p><label for='cTot'>Preço Total: R$</label></p>
+            <p><input type="checkbox" id='cPed' checked>
+                <label for='cPed'>Gostaria de adquirir um Google Glass quando disponível</label></p>
+            <p><label for='cCor'>Cor:</label>
+            <input type="color" name='tCor' id='cCor' value='#0000FF'></p>
+            <p><label for='cQtd'>Quantidade:</label>
+            <input type='number' name="tQtd" id='cQtd' min="0" max="10" value="0"></p>
+            <p><label for='cTot'>Preço Total: R$</label>
+            <input type="text" name="tTot" id="cTot" placeholder="Total a Pagar" readonly></p>
     </fieldset>
 
 
-    [BOTÃO ENVIAR]
+    <input type="image" src="_imagens/botao-enviar.png" name="tEnviar">
 </form>
 
 <footer id='rodape'>
